@@ -1,10 +1,0 @@
-[Desktop Entry]
-Version=1.0
-Type=Application
-Name=PPSSPP (SDL)
-GenericName=PSP Emulator
-Comment=PlayStation Portable Simulator Suitable for Playing Portably (PPSSPP)
-Exec=ppsspp-sdl
-Icon=ppsspp
-Categories=Game
-Keywords=emulator;PSP;PlayStation;Portable;Sony;
