@@ -1,2 +1,0 @@
-usr/bin/PPSSPPSDL            usr/games
-debian/ppsspp-sdl.desktop    usr/share/applications
