@@ -1,1 +1,0 @@
-debian/ppsspp-sdl.6
