@@ -1,2 +1,2 @@
-usr/bin/PPSSPPQt usr/games
+usr/bin/PPSSPPSDL usr/games
 debian/ppsspp.desktop usr/share/applications
