@@ -1,18 +1,0 @@
-[Libretro]
-Type=Emulator
-Version=1.0
-Name=PPSSPP
-Icon=ppsspp
-Module=ppsspp_libretro.so
-LibretroVersion=1
-Authors=Henrik Rydgård;
-License=GPL-2.0+;
-
-[Platform:PlayStationPortable]
-MimeType=application/x-cd-image;application/x-compressed-iso;application/x-executable;text/xml;application/octet-stream;
-Firmwares=PlayStationPortable
-
-[Firmware:PlayStationPortable]
-Path=/usr/share/ppsspp/assets/ppge_atlas.zim
-Mandatory=true
-
