@@ -1,2 +1,2 @@
 #!/bin/sh
-echo "usr/games/PPSSPPQt usr/games/ppsspp"
+echo "usr/games/PPSSPPSDL usr/games/ppsspp"
